Keep only 17 municipios in 'municipality' column, the rest was deleted

--- a/notebooks/location_and_type.ipynb
+++ b/notebooks/location_and_type.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +59,18 @@
     "municipios_filter_2_df = pd.read_excel(xls, 'municipios_filter_2')\n",
     "\n",
     "# Convert municipalities column to a list.\n",
-    "municipios_filter_2 = municipios_filter_2_df['municipio'].tolist()"
+    "municipios_filter_2 = municipios_filter_2_df['municipio'].tolist()\n",
+    "\n",
+    "# Load 17 municipios list from Excel file.\n",
+    "municipios_df = pd.read_excel(keywords_file_path, sheet_name='municipios')\n",
+    "\n",
+    "# Load municipality list names\n",
+    "municipios_list = municipios_df['municipios_list'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,19 +289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7) Delete rows where column 'Municipality' has 'unknown' value.\n",
+    "# 7) Delete rows where column 'Municipality' has 'unknown' values or any other municipality name that is not from Guatemala.\n",
     "\n",
     "# Filter rows ('unknown') in 'type' column.\n",
-    "df = df[df['municipality'] != 'unknown']"
+    "df = df[df['municipality'] != 'unknown']\n",
+    "# Filters original DataFrame to keep only records whose municipality is in the 17 municipality list.\n",
+    "df = df[df['municipality'].isin(municipios_list)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
