Add filter (eliminates rooms < 1).

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -62,76 +62,36 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "27 duplicate rows were removed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 4) Delete those records that have similarity in: title, square_meters, rooms, parking and baths.\n",
+    "# 4) Function created to remove duplicates and filter data (19 <= square_meters < 600; eliminate rooms < 1).\n",
+    "def clean_and_filter_dataframe(df):\n",
     "\n",
-    "#  Count rows number before removing duplicates.\n",
-    "initial_count = df.shape[0]\n",
+    "    # Step 1: Remove duplicates based on specific columns\n",
+    "    df.drop_duplicates(subset=['title', 'square_meters', 'rooms', 'parking', 'baths'], inplace=True)\n",
+    "    \n",
+    "    # Step 2: Filter rows where 'square_meters' is between 19 and 600\n",
+    "    df = df[(df['square_meters'] >= 19) & (df['square_meters'] < 600)]\n",
+    "    \n",
+    "    # Step 3: Keep only rows where 'rooms' > 0\n",
+    "    df = df[df['rooms'] > 0]\n",
+    "    \n",
+    "    # Reset index to maintain DataFrame integrity after filtering\n",
+    "    df.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    return df\n",
     "\n",
-    "# Remove duplicates considering specified columns.\n",
-    "df.drop_duplicates(subset=['title', 'square_meters', 'rooms', 'parking', 'baths'], inplace=True)\n",
     "\n",
-    "# Reset index.\n",
-    "df.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "# Count rows number after removing duplicates.\n",
-    "final_count = df.shape[0]\n",
-    "\n",
-    "# Calculate how many rows were deleted.\n",
-    "removed_count = initial_count - final_count\n",
-    "\n",
-    "# Message about how many rows were deleted.\n",
-    "print(f\"\\n{removed_count} duplicate rows were removed.\")"
+    "df = clean_and_filter_dataframe(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "58 rows were removed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5) Delete rows containing less than 40 square meters.\n",
-    "\n",
-    "#  Count rows number before removing duplicates.\n",
-    "initial_count = df.shape[0]\n",
-    "# Filter rows.\n",
-    "df = df[df['square_meters'] >= 40]\n",
-    "# Reset index.\n",
-    "df.reset_index(drop=True, inplace=True)\n",
-    "# Count rows number after removing duplicates.\n",
-    "final_count = df.shape[0]\n",
-    "# Calculate how many rows were deleted.\n",
-    "removed_count = initial_count - final_count\n",
-    "# Message about how many rows were deleted.\n",
-    "print(f\"\\n{removed_count} rows were removed.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# 6) Convert price to integer, removing symbols (\"[ ]\",\",\"$\",\"Q\") and applying a conversion rate.\n",
+    "# 5) Convert price to integer, removing symbols (\"[ ]\",\",\"$\",\"Q\") and applying a conversion rate.\n",
     "\n",
     "# Define conversion rate ($ to Q).\n",
     "conversion_rate = 7.8\n",
@@ -156,11 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7) Normalize text function.\n",
+    "# 6) Normalize text function.\n",
     "def normalize_text(text):\n",
     "    if isinstance(text, str):\n",
     "        text = re.sub(r\"[.,|()*!-/•:?]\", \" \", text)  # Replace \".\", \",\", \"|\", etc. for space.\n",
@@ -181,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8) Define a new column order.\n",
+    "# 7) Define a new column order.\n",
     "new_order = ['title_normalized', 'price_quetzales','square_meters', 'rooms', 'parking', 'baths', 'location_normalized', 'description_normalized']\n",
     "\n",
     "# Rearrange DataFrame according to the new order.\n",
@@ -194,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 9) Save Clean Data.\n",
+    "# 8) Save Clean Data.\n",
     "# Specify directory path.\n",
     "directory = 'C:\\\\Users\\\\DAV\\\\Documents\\\\Python\\\\Python_Project\\\\House_price_project\\\\data\\\\raw\\\\'\n",
     "\n",
