Update predictive modeling file

--- a/notebooks/predictive_modeling.ipynb
+++ b/notebooks/predictive_modeling.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## **Content**\n",
     "\n",
-    "- [Introduction](#Introduction)\n",
+    "- [Introduction](#introduction)\n",
     "- [Objectives](#Objectives)\n",
     "- [Context](#Context)\n",
     "- [Models to use](#Models-to-Use)\n",
@@ -37,7 +37,7 @@
     "- [Model Summary](#Model-Performance-Summary)\n",
     "- [Conclusions](#Conclusions)\n",
     "- [Recommendations](#Recommendations)\n",
-    "- [Future Directions](#Future-Directions)"
+    "- [Future Directions](#future-directions)"
    ]
   },
   {
