Update predictive modeling file

--- a/notebooks/predictive_modeling.ipynb
+++ b/notebooks/predictive_modeling.ipynb
@@ -15,28 +15,28 @@
     "\n",
     "- [Introduction](#introduction)\n",
     "- [Objectives](#objectives)\n",
-    "- [Context](#Context)\n",
-    "- [Models to use](#Models-to-Use)\n",
-    "- [Import Libraries and Load Clean Data](#Import-Libraries-and-Load-Clean-Data)\n",
-    "- [Preprocessing, training and test, and graphic function](#Define-Function)\n",
-    "- [Linear Regression](#Linear-Regression)\n",
-    "    - [House](#House:-Linear-Regression-Results)\n",
-    "    - [Apartment](#Apartment:-Linear-Regression-Results)\n",
-    "- [Lasso Regression](#Lasso-Regression)\n",
-    "    - [House](#House:-Lasso-Regression-Results)\n",
-    "    - [Apartment](#Apartment:-Lasso-Regression-Results)\n",
-    "- [Decision Tree](#Decision-Tree)\n",
-    "    - [House](#House:-Decision-Tree-Results)\n",
-    "    - [Apartment](#Apartment:-Decision-Tree-Results)\n",
-    "- [Random Forest](#Random-Forest)\n",
-    "    - [House](#House:-Random-Forest-Results)\n",
-    "    - [Apartment](#Apartment:-Random-Forest-Results)\n",
-    "- [Gradient Boosting](#Gradient-Boosting)\n",
-    "    - [House](#House:-Gradient-Boosting-Results)\n",
-    "    - [Apartment](#Apartment:-Gradient-Boosting-Results)\n",
-    "- [Model Summary](#Model-Performance-Summary)\n",
-    "- [Conclusions](#Conclusions)\n",
-    "- [Recommendations](#Recommendations)\n",
+    "- [Context](#context)\n",
+    "- [Models to use](#codels-to-use)\n",
+    "- [Import Libraries and Load Clean Data](#import-libraries-and-load-clean-data)\n",
+    "- [Preprocessing, training and test, and graphic function](#define-function)\n",
+    "- [Linear Regression](#linear-regression)\n",
+    "    - [House](#house-linear-regression-results)\n",
+    "    - [Apartment](#apartment-rinear-regression-results)\n",
+    "- [Lasso Regression](#lasso-regression)\n",
+    "    - [House](#house-lasso-regression-results)\n",
+    "    - [Apartment](#apartment-lasso-regression-results)\n",
+    "- [Decision Tree](#decision-tree)\n",
+    "    - [House](#house-decision-tree-results)\n",
+    "    - [Apartment](#apartment-decision-tree-results)\n",
+    "- [Random Forest](#random-forest)\n",
+    "    - [House](#house-random-forest-results)\n",
+    "    - [Apartment](#apartment-random-forest-results)\n",
+    "- [Gradient Boosting](#gradient-boosting)\n",
+    "    - [House](#house-gradient-boosting-results)\n",
+    "    - [Apartment](#apartment-gradient-boosting-results)\n",
+    "- [Model Summary](#model-performance-summary)\n",
+    "- [Conclusions](#conclusions)\n",
+    "- [Recommendations](#recommendations)\n",
     "- [Future Directions](#future-directions)"
    ]
   },
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **House: Linear Regression Results**\n",
+    "### **House Linear Regression Results**\n",
     "\n",
     "##### The linear regression model for predicting house prices yielded the following results:\n",
     "\n",
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Apartment: Linear Regression Results**\n",
+    "### **Apartment Linear Regression Results**\n",
     "\n",
     "##### For apartments, the linear regression model produced these results:\n",
     "\n",
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **House: Lasso Regression Results**\n",
+    "### **House Lasso Regression Results**\n",
     "##### The lasso regression model for predicting house prices yielded the following results:\n",
     "- **Mean Squared Error (MSE):** 114,502,773,890.86\n",
     "- **R² score:** 0.31 \n",
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Apartment: Lasso Regression Results**\n",
+    "### **Apartment Lasso Regression Results**\n",
     "##### For apartments, the lasso regression model produced these results:\n",
     "- **Mean Squared Error (MSE):** 37,611,495,907.21 \n",
     "- **R² score:** 0.68. \n",
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **House: Decision Tree Results**\n",
+    "### **House Decision Tree Results**\n",
     "##### The decision tree model for predicting house prices yielded the following results:\n",
     "- **Mean Squared Error (MSE):** 113,909,336,988.04\n",
     "- **R² Score:** 0.31\n",
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Apartment: Decision Tree Results**\n",
+    "### **Apartment Decision Tree Results**\n",
     "##### The decision tree model for predicting apartment prices yielded the following results:\n",
     "\n",
     "- **Mean Squared Error (MSE):** 54,712,149,941.41\n",
@@ -616,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **House: Random Forest Results**\n",
+    "### **House Random Forest Results**\n",
     "##### The random forest model for predicting house prices yielded the following results:\n",
     "- **Mean Squared Error (MSE):** 90,452,266,586.44\n",
     "- **R² Score: 0.45**\n",
@@ -663,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Apartment: Random Forest Results**\n",
+    "### **Apartment Random Forest Results**\n",
     "##### The random forest model for predicting apartment prices yielded the following results:\n",
     "- **Mean Squared Error (MSE):** 38,158,065,566.22\n",
     "- **R² Score: 0.67**\n",
@@ -717,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **House: Gradient Boosting Results**\n",
+    "### **House Gradient Boosting Results**\n",
     "##### The gradient boosting model for predicting house prices yielded the following results:\n",
     "- **Mean Squared Error (MSE):** 93,456,949,498.50\n",
     "- **R² Score:** 0.44\n",
@@ -764,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Apartment: Gradient Boosting Results**\n",
+    "### **Apartment Gradient Boosting Results**\n",
     "The gradient boosting model for predicting apartment prices yielded the following results:\n",
     "- **Mean Squared Error (MSE):** 36,422,015,990.71\n",
     "- **R² Score:** 0.69\n",
